src/index.css
html{
  scroll-behavior: smooth;
}

body {
  margin: 0;
  padding-top: 80px;
  font-family: Arial, Helvetica, sans-serif;
  background: #0f172a;
  color: white;
}

section {
 min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 16px;
  text-align: center;
}

h1 {
  font-size: 48px;
  background: linear-gradient(90deg, #38bdf8, #818cf8);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

p {
  font-size: 20px;
  color: #cbd5f5;
}

h2{
  font-size: 36px;
}

section p {
  max-width: 600px;
  text-align: center;
  line-height: 1.6;
}
.navbar {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  background: #0f172a;
  z-index: 1000;
}

.nav-container {
  max-width: 1100px;
  margin: auto;
  padding: 20px 40px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.nav-links {
  display: flex;
  gap: 24px;
}

.nav-links a {
  text-decoration: none;
  color: white;
  transition: color 0.3s ease;
}
.nav-links a:hover{
  color:#38bdf8;
}

.projects-grid{
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 30px;
  margin-top: 40px;
}
.project-card {
  background: #1e293b;
  padding: 25px;
  border-radius: 10px;
  text-align: left;
  transition: transform 0.3s ease,box-shadow 0.3s ease;
}
.project-card:hover{
  transform: translateY(-8px);
  box-shadow: 0 10px 25px rgba(0,0,0,0.3);
}

.project-card h3 {
  margin-top: 0;
}

.project-links {
  margin-top: 15px;
}

.project-links a {
  margin-right: 15px;
  color: #38bdf8;
  text-decoration: none;
  font-weight: 500;
}
.project-tech {
  margin-top: 10px;
}

.project-tech span{
  background: #334155;
  padding: 5px 10px;
  border-radius: 6px;
  margin-right: 6px;
  font-size: 12px;
}

.contact-links {
  margin-top: 20px;
}

.contact-links a {
  margin-right: 20px;
  color: #38bdf8;
  text-decoration: none;
  font-weight: 500;
}
.footer{
  text-align: center;
  padding: 30px;
  background: #0f172a;
  color: #94a3b8;
}

